--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.12.18",
     "next": "13.4.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^6.0.1"
   },
   "devDependencies": {
+    "@types/node": "20.3.3",
+    "@types/react": "18.2.14",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.7"
+    "eslint-config-next": "13.4.7",
+    "typescript": "5.1.6"
   }
 }
